--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -1,7 +1,7 @@
 {
   "header": {
     "logo": "CHIP GAMES",
-    "gameTitle": "ChipGemSort",
+    "gameTitle": "カラーソートパズル",
     "playGame": "プレイ",
     "guide": "ガイド",
     "help": "ヘルプ",
@@ -17,8 +17,8 @@
     "copyright": "© ChipGames. All rights reserved."
   },
   "menu": {
-    "title": "ChipGemSort",
-    "subtitle": "カラーソートパズル",
+    "title": "カラーソートパズル",
+    "subtitle": "ジェムを試験管に分けて、1本1色に揃えよう！",
     "playGame": "ゲームをプレイ",
     "guide": "ガイド",
     "help": "ヘルプ"
