--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -47,16 +47,79 @@
   "guide": {
     "title": "게임 가이드",
     "description": "젬을 병에서 병으로 옮겨 한 병에 한 색만 남기세요.",
-    "step1": "병을 탭해 선택한 뒤, 옮길 병을 다시 탭하세요.",
-    "step2": "맨 위에 있는 젬만 옮길 수 있고, 빈 병이나 같은 색 위에만 붓을 수 있습니다.",
-    "step3": "모든 병이 한 색으로만 채워지면 클리어입니다."
+    "objective": "목표",
+    "objectiveText": "모든 젬을 같은 색끼리 묶어 각 병에 한 가지 색만 남기세요. 모든 병이 한 색으로만 채워지면 클리어입니다.",
+    "rules": "게임 규칙",
+    "rulesList": [
+      "맨 위에 있는 젬만 이동할 수 있습니다.",
+      "젬은 빈 병이나 같은 색 젬 위에만 옮길 수 있습니다.",
+      "다른 색 젬 위에는 옮길 수 없습니다.",
+      "병의 용량은 제한되어 있습니다 (보통 4개)."
+    ],
+    "steps": "플레이 방법",
+    "step1": "1. 병 선택: 젬이 있는 병을 탭하여 선택합니다.",
+    "step2": "2. 이동: 같은 색 젬이 있는 병이나 빈 병을 탭하여 젬을 옮깁니다.",
+    "step3": "3. 전략: 앞으로의 이동을 계획하고, 빈 병을 활용하여 젬을 정리하세요.",
+    "step4": "4. 클리어: 모든 병이 한 색으로만 채워지면 완료입니다!",
+    "tips": "팁",
+    "tipsList": [
+      "실수했다면 '실행 취소' 버튼을 사용하세요.",
+      "어려운 스테이지는 '다시 하기'로 처음부터 시작할 수 있습니다.",
+      "빈 병을 전략적으로 활용하면 더 쉽게 정리할 수 있습니다.",
+      "같은 색 젬을 한 번에 많이 옮기면 효율적입니다."
+    ]
   },
   "help": {
     "title": "도움말",
-    "description": "자주 묻는 질문과 문제 해결 방법을 확인하세요."
+    "description": "자주 묻는 질문과 문제 해결 방법을 확인하세요.",
+    "faq": [
+      {
+        "question": "게임이 너무 어려워요",
+        "answer": "처음에는 낮은 스테이지부터 차근차근 플레이해보세요. 각 스테이지는 풀 수 있도록 설계되어 있습니다. 실수했다면 '실행 취소' 버튼을 사용하거나 '다시 하기'로 처음부터 시작할 수 있습니다."
+      },
+      {
+        "question": "스테이지를 건너뛸 수 있나요?",
+        "answer": "스테이지는 순서대로 진행됩니다. 이전 스테이지를 클리어하면 다음 스테이지가 자동으로 잠금 해제됩니다. 진행 상황은 자동으로 저장됩니다."
+      },
+      {
+        "question": "진행 상황이 저장되나요?",
+        "answer": "네, 진행 상황은 자동으로 저장됩니다. 브라우저를 닫았다가 다시 열어도 마지막으로 클리어한 스테이지까지는 잠금 해제된 상태로 유지됩니다."
+      },
+      {
+        "question": "실행 취소(Undo) 기능은 어떻게 사용하나요?",
+        "answer": "게임 화면 상단의 '실행 취소' 버튼을 클릭하면 이전 이동을 취소할 수 있습니다. 클리어한 후에는 실행 취소를 사용할 수 없습니다."
+      },
+      {
+        "question": "모바일에서 화면이 회전해요",
+        "answer": "헤더의 화면 고정 버튼을 사용하여 가로 또는 세로 모드를 고정할 수 있습니다. 게임에 집중하기 좋은 방향으로 고정하세요."
+      },
+      {
+        "question": "게임이 느리게 실행돼요",
+        "answer": "브라우저를 최신 버전으로 업데이트하고, 다른 탭이나 앱을 닫아 메모리를 확보해보세요. 캐시를 삭제한 후 다시 시도해볼 수도 있습니다."
+      }
+    ]
   },
   "about": {
     "title": "게임 소개",
-    "description": "ChipGemSort는 색상 정렬 퍼즐 게임입니다. 젬을 병에 나눠 담아 한 병에 한 색만 맞춰보세요."
+    "description": "ChipGemSort는 색상 정렬 퍼즐 게임입니다. 젬을 병에 나눠 담아 한 병에 한 색만 맞춰보세요.",
+    "features": "게임 특징",
+    "featuresList": [
+      "200개의 다양한 스테이지",
+      "점진적으로 어려워지는 난이도",
+      "실행 취소(Undo) 기능",
+      "자동 진행 상황 저장",
+      "다크/라이트 모드 지원",
+      "모바일 최적화",
+      "무료 플레이"
+    ],
+    "howToPlay": "게임 방법",
+    "howToPlayText": "젬을 병에서 병으로 옮겨 같은 색끼리 묶으세요. 맨 위의 젬만 이동할 수 있으며, 빈 병이나 같은 색 위에만 옮길 수 있습니다.",
+    "developer": "제작자",
+    "developerText": "ChipGemSort는 CHIP GAMES에서 제작한 무료 온라인 퍼즐 게임입니다.",
+    "version": "버전",
+    "credits": "크레딧",
+    "creditsText": "이 게임은 워터 소트(Water Sort) 퍼즐 게임 장르에서 영감을 받았습니다.",
+    "contact": "문의",
+    "contactText": "문의사항이나 피드백이 있으시면 언제든지 연락해주세요."
   }
 }
