--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -47,16 +47,79 @@
   "guide": {
     "title": "ガイド",
     "description": "ジェムを管から管へ移して、1本の管に1色だけにしましょう。",
-    "step1": "管をタップして選択し、移し先の管をタップします。",
-    "step2": "一番上のジェムだけ移動でき、空の管か同じ色の上にのみ移せます。",
-    "step3": "すべての管が1色で揃うとクリアです。"
+    "objective": "目標",
+    "objectiveText": "同じ色のジェムをすべてまとめて、各管に1色だけ残します。すべての管が1色で揃うとクリアです。",
+    "rules": "ゲームルール",
+    "rulesList": [
+      "一番上のジェムだけ移動できます。",
+      "ジェムは空の管か同じ色の上にのみ移せます。",
+      "異なる色の上には置けません。",
+      "管の容量は制限されています（通常4個）。"
+    ],
+    "steps": "プレイ方法",
+    "step1": "1. 管を選択：ジェムがある管をタップして選択します。",
+    "step2": "2. 移動：同じ色のジェムがある管または空の管をタップしてジェムを移します。",
+    "step3": "3. 戦略：先を見越して移動を計画し、空の管を戦略的に活用してジェムを整理しましょう。",
+    "step4": "4. クリア：すべての管が1色で揃うと完了です！",
+    "tips": "ヒント",
+    "tipsList": [
+      "間違えた場合は「元に戻す」ボタンを使用してください。",
+      "難しいステージは「リトライ」ボタンで最初からやり直せます。",
+      "空の管を戦略的に活用すると、より簡単に整理できます。",
+      "同じ色のジェムを一度に多く移すと効率的です。"
+    ]
   },
   "help": {
     "title": "ヘルプ",
-    "description": "よくある質問とトラブルシューティングをご確認ください。"
+    "description": "よくある質問とトラブルシューティングをご確認ください。",
+    "faq": [
+      {
+        "question": "ゲームが難しすぎます",
+        "answer": "最初は低いステージから順番にプレイしてみてください。各ステージは解けるように設計されています。間違えた場合は「元に戻す」ボタンを使うか、「リトライ」で最初からやり直せます。"
+      },
+      {
+        "question": "ステージをスキップできますか？",
+        "answer": "ステージは順番に進める必要があります。ステージをクリアすると、次のステージが自動的にアンロックされます。進行状況は自動的に保存されます。"
+      },
+      {
+        "question": "進行状況は保存されますか？",
+        "answer": "はい、進行状況は自動的に保存されます。ブラウザを閉じても、最後にクリアしたステージまではアンロックされた状態のままです。"
+      },
+      {
+        "question": "元に戻す機能はどう使いますか？",
+        "answer": "ゲーム画面の上部にある「元に戻す」ボタンをクリックすると、前の移動をキャンセルできます。クリア後は元に戻す機能は使用できません。"
+      },
+      {
+        "question": "モバイルで画面が回転します",
+        "answer": "ヘッダーの画面固定ボタンを使用して、縦または横モードを固定できます。ゲームに集中しやすい方向に固定してください。"
+      },
+      {
+        "question": "ゲームが遅く動作します",
+        "answer": "ブラウザを最新バージョンに更新し、他のタブやアプリを閉じてメモリを確保してください。キャッシュを削除してから再度お試しください。"
+      }
+    ]
   },
   "about": {
     "title": "紹介",
-    "description": "ChipGemSortはカラーソートパズルです。ジェムを管に分けて1管1色に揃えましょう。"
+    "description": "ChipGemSortはカラーソートパズルです。ジェムを管に分けて1管1色に揃えましょう。",
+    "features": "ゲームの特徴",
+    "featuresList": [
+      "200の多様なステージ",
+      "段階的に難しくなる難易度",
+      "元に戻す機能",
+      "自動進行状況保存",
+      "ダーク/ライトモード対応",
+      "モバイル最適化",
+      "無料プレイ"
+    ],
+    "howToPlay": "ゲーム方法",
+    "howToPlayText": "ジェムを管から管へ移して同じ色でグループ化します。一番上のジェムだけ移動でき、空の管か同じ色の上にのみ移せます。",
+    "developer": "開発者",
+    "developerText": "ChipGemSortはCHIP GAMESが制作した無料オンラインパズルゲームです。",
+    "version": "バージョン",
+    "credits": "クレジット",
+    "creditsText": "このゲームはウォーターソートパズルゲームジャンルからインスピレーションを受けています。",
+    "contact": "お問い合わせ",
+    "contactText": "ご質問やフィードバックがございましたら、お気軽にお問い合わせください。"
   }
 }
