--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -47,16 +47,79 @@
   "guide": {
     "title": "游戏指南",
     "description": "将宝石从试管移到试管，使每支试管只有一种颜色。",
-    "step1": "点击试管选中，再点击目标试管。",
-    "step2": "只能移动最上面的宝石，且只能移到空试管或同色宝石上。",
-    "step3": "当所有试管都只有一种颜色时即过关。"
+    "objective": "目标",
+    "objectiveText": "将所有相同颜色的宝石分组，使每支试管只包含一种颜色。当所有试管都只有一种颜色时即过关。",
+    "rules": "游戏规则",
+    "rulesList": [
+      "只能移动最上面的宝石。",
+      "宝石只能移到空试管或同色宝石上。",
+      "不能将宝石放在不同颜色的宝石上。",
+      "试管容量有限（通常为4个）。"
+    ],
+    "steps": "如何游戏",
+    "step1": "1. 选择试管：点击有宝石的试管进行选择。",
+    "step2": "2. 移动：点击另一个有相同颜色的试管或空试管来移动宝石。",
+    "step3": "3. 策略：提前规划移动，战略性地使用空试管来整理宝石。",
+    "step4": "4. 完成：当所有试管都只有一种颜色时即完成！",
+    "tips": "提示",
+    "tipsList": [
+      "如果出错，可以使用「撤销」按钮。",
+      "困难的关卡可以使用「重试」按钮重新开始。",
+      "战略性地使用空试管会使整理更容易。",
+      "一次移动多个同色宝石更高效。"
+    ]
   },
   "help": {
     "title": "帮助",
-    "description": "请查看常见问题与故障排除。"
+    "description": "请查看常见问题与故障排除。",
+    "faq": [
+      {
+        "question": "游戏太难了",
+        "answer": "请从较低的关卡开始，逐步进行。每个关卡都设计为可解的。如果出错，可以使用「撤销」按钮或「重试」重新开始。"
+      },
+      {
+        "question": "可以跳过关卡吗？",
+        "answer": "关卡必须按顺序完成。当您完成一个关卡时，下一个关卡会自动解锁。您的进度会自动保存。"
+      },
+      {
+        "question": "我的进度会保存吗？",
+        "answer": "是的，您的进度会自动保存。即使关闭浏览器，直到您最后完成的关卡都会保持解锁状态。"
+      },
+      {
+        "question": "如何使用撤销功能？",
+        "answer": "点击游戏屏幕上方的「撤销」按钮可以取消上一次移动。完成关卡后无法使用撤销功能。"
+      },
+      {
+        "question": "在手机上屏幕会旋转",
+        "answer": "使用标题栏中的屏幕锁定按钮可以锁定为竖屏或横屏模式。选择最适合您的方向。"
+      },
+      {
+        "question": "游戏运行缓慢",
+        "answer": "请将浏览器更新到最新版本，并关闭其他标签页或应用以释放内存。您也可以尝试清除缓存后重新加载。"
+      }
+    ]
   },
   "about": {
     "title": "关于",
-    "description": "ChipGemSort 是颜色排序拼图游戏。将宝石分到试管中，使每支试管只有一种颜色。"
+    "description": "ChipGemSort 是颜色排序拼图游戏。将宝石分到试管中，使每支试管只有一种颜色。",
+    "features": "游戏特点",
+    "featuresList": [
+      "200个多样化关卡",
+      "逐步增加的难度",
+      "撤销功能",
+      "自动保存进度",
+      "深色/浅色模式支持",
+      "移动端优化",
+      "免费游玩"
+    ],
+    "howToPlay": "如何游戏",
+    "howToPlayText": "将宝石从试管移到试管，按颜色分组。只能移动最上面的宝石，且只能移到空试管或同色宝石上。",
+    "developer": "开发者",
+    "developerText": "ChipGemSort 是由 CHIP GAMES 制作的免费在线拼图游戏。",
+    "version": "版本",
+    "credits": "致谢",
+    "creditsText": "本游戏灵感来源于水排序拼图游戏类型。",
+    "contact": "联系方式",
+    "contactText": "如有任何问题或反馈，欢迎随时联系我们。"
   }
 }
