--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -38,6 +38,7 @@
   "game": {
     "moves": "步数",
     "undo": "撤销",
+    "hint": "提示",
     "stage": "关卡",
     "complete": "完成！",
     "retry": "重试",
