--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -41,6 +41,7 @@
     "hint": "ヒント",
     "stage": "ステージ",
     "complete": "クリア！",
+    "best": "ベスト",
     "retry": "リトライ",
     "nextStage": "次のステージ",
     "back": "戻る"
