--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -41,6 +41,7 @@
     "hint": "힌트",
     "stage": "스테이지",
     "complete": "클리어!",
+    "best": "최고 기록",
     "retry": "다시 하기",
     "nextStage": "다음 스테이지",
     "back": "돌아가기"
