--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -8,7 +8,12 @@
     "about": "게임 소개",
     "lightMode": "라이트 모드",
     "darkMode": "다크 모드",
-    "installApp": "앱으로 설치"
+    "installApp": "앱으로 설치",
+    "installBannerText": "앱으로 설치하면 더 편하게 플레이할 수 있어요",
+    "installBannerDismiss": "닫기"
+  },
+  "offline": {
+    "message": "오프라인입니다. 일부 기능이 제한될 수 있습니다."
   },
   "orientation": {
     "lock": "화면 고정",
